# scorep-amdsmi-plugin

./: CMakeLists.txt  apapi.c  c  c_all
common/: FindVampirTrace.cmake
